# portfolio-projects

./: README.md
animalia/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
animalia/.circleci/: config.yml
animalia/.github/workflows/: code-quality.yml  front-ci.yml  go-test.yml
animalia/algorithm/: .gitignore  Dockerfile  README.md  pyproject.toml  setup.sh
animalia/algorithm/common/src/: multimodal_feature_extractor.py
animalia/algorithm/common/utils/: config.py  database.py  preprocess.py  s3.py
animalia/algorithm/recommend_system/api/: embedding_to_train.py  main.py  recommend_timeline.py
animalia/algorithm/recommend_system/components/: data.py  engine.py  metrics.py  mmneumf.py
animalia/algorithm/recommend_system/notebooks/: check.ipynb
animalia/algorithm/recommend_system/src/: download_model.py  train_prod.py  train_sim.py  upload_model.py
animalia/algorithm/recommend_system/utils/: config.py  utils.py
animalia/algorithm/search_engine/: docker-compose.yml
animalia/algorithm/search_engine/sql/: create_all_tables.sql
animalia/algorithm/search_engine/src/: app.py  download_images.py  image_search.py  register_images.py  st_app.py
animalia/algorithm/task_scoring_system/api/: main.py
animalia/algorithm/task_scoring_system/src/: upload_task_feature.py
animalia/app-front/: .eslintrc.js  .prettierignore  app.config.js  app.json  package-lock.json  package.json
animalia/app-front/app/: _layout.tsx
animalia/app-front/components/: CommentInput.tsx  CommentsModal.tsx  CreatePostModal.tsx  DailyTaskPopUp.tsx  FormInput.tsx  HelloWave.tsx  LikedUsesModal.tsx  ParallaxScrollView.tsx  PetEditModal.tsx  PetPanel.tsx  PetRegisterModal.tsx  PostModal.tsx  PostPanel.tsx  ProfileEditModal.tsx  ProfileHeader.tsx  ProfilePostPanel.tsx  ProfileTabSelector.tsx  UserPetsList.tsx  UserPostList.tsx  UserProfileHeader.tsx  UserProfileModal.tsx  UsersList.tsx  UsersModal.tsx
animalia/app-front/constants/: Colors.ts  petSpecies.ts
animalia/app-front/hooks/: useToggleLike.ts
animalia/app-front/providers/: AuthContext.tsx  HomeTabScrollContext.tsx  ModalStackContext.tsx
animalia/app-front/utils/: api.ts  date.ts  form.ts
animalia/backend-go/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum  tools.go
animalia/backend-go/aws/: cdk.json  package.json  (+1 more)
animalia/db/: Dockerfile
(+179 files in other folders)
